added charts index html

--- a/app/views/charts/index.html.haml
+++ b/app/views/charts/index.html.haml
@@ -1,1 +1,11 @@
-#chart
+#above_chart.center-70
+  .button-area
+    %button#button1.audiowide CHART
+    %button#button2.audiowide MAP
+
+#chart.center-70
+
+#gauges.center-70
+  #gauge1
+  #gauge2
+  #gauge3
