--- a/app/views/charts/index.html.haml
+++ b/app/views/charts/index.html.haml
@@ -1,11 +1,27 @@
-#above_chart.center-70
-  .button-area
+#above_chart.center-60
+  .button-area1
     %button#button1.audiowide CHART
     %button#button2.audiowide MAP
 
-#chart.center-70
+#main
+  #chart
+  #display
+    %h4.perm-marker.text-center Data Point:
+    %p.perm-marker Altitude:
+    %p.perm-marker B. Pressure:
+    %p.perm-marker Temperature:
+    %p.perm-marker Wind Direction:
 
-#gauges.center-70
+#below_chart.center-60
+  .center-60
+    %button#button-step-back
+      %i.fa.fa-step-backward
+    %button#button-play
+      %i.fa.fa-play
+    %button#button-step-forw
+      %i.fa.fa-step-forward
+
+#gauges.center-60
   #gauge1
   #gauge2
   #gauge3
