--- a/app/assets/stylesheets/base/typography.css
+++ b/app/assets/stylesheets/base/typography.css
@@ -1,6 +1,30 @@
+.text-center {
+  text-align:  center;
+}
+h1 {
+  font-size: 100px;
+  color: white;
+  margin: 0;
+}
 .ceviche {
   font-family: 'Ceviche One', cursive;
 }
 .audiowide {
   font-family: 'Audiowide', cursive;
+}
+.perm-marker {
+  font-family: 'Permanent Marker', cursive;
+}
+h4 {
+  font-size: 20px;
+  margin: 5% auto;
+}
+p {
+  margin: auto 5%;
+}
+
+@media (max-width: 600px) {
+  h1 {
+    font-size: 50px;
+  }
 }
