added click to display functionality

--- a/app/views/charts/index.html.haml
+++ b/app/views/charts/index.html.haml
@@ -7,10 +7,9 @@
   #chart
   #display
     %h4.perm-marker.text-center Data Point:
-    %p.perm-marker Altitude:
-    %p.perm-marker B. Pressure:
-    %p.perm-marker Temperature:
-    %p.perm-marker Wind Direction:
+    %p.perm-marker#time
+    %p.perm-marker#altitude
+    %p.perm-marker#temp
 
 #below_chart.center-60
   .center-60
