--- a/app/assets/stylesheets/base/typography.css
+++ b/app/assets/stylesheets/base/typography.css
@@ -23,6 +23,18 @@ p {
   margin: auto 5%;
 }
 
+a {
+  color: #ccc;
+}
+
+a:visited {
+  color: #999;
+}
+
+a:hover {
+  color: #777;
+}
+
 @media (max-width: 600px) {
   h1 {
     font-size: 50px;
