--- a/frontend/css/base/layout.css
+++ b/frontend/css/base/layout.css
@@ -80,5 +80,24 @@
 
 #earth {
   max-width:100%;
+}
 
+/* Flights Page */
+#table-container {
+  background: #D1DBDD;
+  border: 3px solid white;
+  border-radius: 15px;
+}
+table {
+  margin: 3% auto;
+}
+th {
+  color: black;
+  border: 2px solid white;
+  margin: 5px auto;
+}
+td {
+  color: navy;
+  border: 2px solid white;
+  margin: 5px auto;
 }
