--- a/app/views/flights/show.html.haml
+++ b/app/views/flights/show.html.haml
@@ -2,14 +2,19 @@
 	="#{@flight.callsign}"
 
 %h3
-	="Max Altitude: #{@flight.max_altitude}"
+	="Max Altitude: #{@flight.max_altitude} m"
 	%br
-	="Flight Duration: #{@flight.duration}"
+	="Sounding Duration: #{@flight.duration}"
 	%br
-	="Total Distance Traveled: #{@flight.distance_traveled}"
+	="Total Distance Traveled: #{@flight.distance_traveled.round} km"
 	%br
-	-@data_points.each_with_index do |point, index|
-		%br
-		=index + 1
-		-point[:data].each do |key, value|
-			="#{key}: #{value}" if value
+	%button.show_all_data{id: 'button1'} View Data
+	%button.show_flight_chart{id: 'button2'} View Chart/Map
+	%div.flight_chart
+		= render :partial => 'charts/index'
+	%div.all_data
+		-@data_points.each_with_index do |point, index|
+			%br
+			=index + 1
+			-point[:data].each do |key, value|
+				="#{key}: #{value}" if value
