--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
     <link href='http://fonts.googleapis.com/css?family=Permanent+Marker' rel='stylesheet' type='text/css'>
   </head>
   <body class="bg-tile">
-    <header><h1 class="ceviche text-center">ascent</h1></header>
+    <header><h1 class="ceviche text-center">Ascent</h1></header>
 
     <div class="container">
       <%= yield %>
