--- a/app/assets/stylesheets/components/buttons.css
+++ b/app/assets/stylesheets/components/buttons.css
@@ -1,6 +1,7 @@
 button {
   height: 50px;
   border: 5px solid #FCFCFC;
+  color: black;
 }
 button:hover {
   background-color: #FF4500;
@@ -44,7 +45,7 @@ button:focus {
 }
 #button-step-forw {
   height: 40px;
-  width: 8%;;
+  width: 8%;
   position: absolute;
   border-radius: 0 12px 12px 0;
   color: #FCFCFC;
