--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -1,5 +1,6 @@
-%div.container
-	%h1 Ascent
-	%h2 Getting you Higher
-	=link_to "View Flights", flights_path
-	=link_to "Create Flight", new_flight_path
+%h1 Get High
+
+%a{:href => flights_path}
+  %button{id: 'button1'} View Flights
+%a{:href => new_flight_path}
+  %button{id: 'button2'} Create Flight
