--- a/app/views/charts/_index.html.haml
+++ b/app/views/charts/_index.html.haml
@@ -5,6 +5,7 @@
 
 #main
   #chart
+    #map
   #display
     %h4.perm-marker.text-center Data Point:
     %p.perm-marker#time
@@ -24,3 +25,4 @@
   #gauge1
   #gauge2
   #gauge3
+
