--- a/app/assets/stylesheets/base/layout.css.scss
+++ b/app/assets/stylesheets/base/layout.css.scss
@@ -44,6 +44,16 @@
   position: absolute;
   height: 400px;
   margin: 10px auto 0;
+  // display: none;
+  width: 60%;
+  margin: 0 0 0 -30%;
+  left: 50%;
+}
+#map {
+  float: right;
+  clear: both;
+  height: 400px;
+  margin: 10px auto 0;
   display: inline-block;
   width: 60%;
   margin: 0 0 0 -30%;
@@ -65,6 +75,8 @@
   position: relative;
   margin: 15px auto;
 }
+
+
 
 @media (max-width: 1300px) {
   #above_chart {
