playing around with gauges

--- a/app/views/charts/_index.html.haml
+++ b/app/views/charts/_index.html.haml
@@ -22,7 +22,8 @@
       %i.fa.fa-step-forward
 
 #gauges.center-60
-  #gauge1
+  #gauge_1
+    = render :partial => 'gauges/gauge_1'
   #gauge2
   #gauge3
 
