--- a/app/assets/stylesheets/components/buttons.css
+++ b/app/assets/stylesheets/components/buttons.css
@@ -5,11 +5,16 @@ button {
   background-color: purple;
 }
 button:hover {
-  background-color: #FF4500;
+  background-color: #CC00CC;
 }
 button:focus {
   outline: 0;
 }
+
+button:active {
+  background-color: #400040;
+}
+
 #button1 {
   border-radius: 15px 0 0 15px;
   color: #FCFCFC;
@@ -31,9 +36,7 @@ button:focus {
   width: 10%;
 
 }
-#button-play:hover {
-  background-color: #FF202D;
-}
+
 #button-step-back {
   height: 40px;
   width: 8%;
@@ -45,7 +48,7 @@ button:focus {
   top: 5px;
 }
 #button-step-back:hover {
-  background-color: #79e6e5;
+  background-color: #CC00CC;
 }
 #button-step-forw {
   height: 40px;
@@ -58,7 +61,7 @@ button:focus {
   top: 5px;
 }
 #button-step-forw:hover {
-  background-color: #79e6e5;
+  background-color: #CC00CC;
 }
 
 @media (max-width: 600px) {
