uncommented map functionality. attempting to set map/chart toggle.

--- a/app/views/charts/_index.html.haml
+++ b/app/views/charts/_index.html.haml
@@ -5,6 +5,7 @@
 
 #main
   #chart
+  #map
 
   #display
     %h4.perm-marker.text-center Data Point:
@@ -24,4 +25,6 @@
   #gauge_1
   #gauge_2
   #gauge_3
+
+
 
