--- a/app/views/charts/index.html.haml
+++ b/app/views/charts/index.html.haml
@@ -1,7 +1,7 @@
 #above_chart.center-60
   .button-area1
-    %button#button1.audiowide CHART
-    %button#button2.audiowide MAP
+    %button.button_left#chart_button.audiowide CHART
+    %button.button_right#map_button.audiowide MAP
 
 #main
   #chart
