--- a/app/assets/stylesheets/components/buttons.css
+++ b/app/assets/stylesheets/components/buttons.css
@@ -15,13 +15,13 @@ button:active {
   background-color: #400040;
 }
 
-#button1 {
+.button_left {
   border-radius: 15px 0 0 15px;
   color: #FCFCFC;
   width: 45%;
 
 }
-#button2 {
+.button_right {
   border-radius: 0 15px 15px 0;
   color: #FCFCFC;
   width: 45%;
@@ -70,11 +70,11 @@ button:active {
   }
 }
 @media (max-width: 1300px) {
-  #button1 {
+  .button_left {
     height: 35px;
     font-size: 10px;
   }
-  #button2 {
+  .button_right {
     height: 35px;
     font-size: 10px;
   }
