--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -1,6 +1,6 @@
 %h1 Get High
 
 %a{:href => flights_path}
-  %button{id: 'button1'} View Flights
+  %button.button_left View Flights
 %a{:href => new_flight_path}
-  %button{id: 'button2'} Create Flight
+  %button.button_right Create Flight
