--- a/app/views/charts/_index.html.haml
+++ b/app/views/charts/_index.html.haml
@@ -1,12 +1,11 @@
 #above_chart.center-60
   .button-area1
-    %button.button_left.audiowide CHART
-    %button.button_right.audiowide MAP
+    %button.button_left.audiowide#chart_button CHART
+    %button.button_right.audiowide#map_button MAP
 
 #main
   #chart
   #map
-
   #display
     %h4.perm-marker.text-center Data Point:
     %p.perm-marker#time
