--- a/app/assets/stylesheets/base/layout.css.scss
+++ b/app/assets/stylesheets/base/layout.css.scss
@@ -42,7 +42,6 @@ html,body {
 
 #main {
   position: relative;
-  width: 100%;
   height: 400px;
   display: block;
 }
@@ -54,6 +53,8 @@ html,body {
   width: 60%;
   margin: 0 0 0 -30%;
   left: 50%;
+  border: solid 10px gray;
+  border-radius: 2%;
 }
 
 #map {
@@ -64,6 +65,8 @@ html,body {
   width: 60%;
   margin: 0 0 0 -30%;
   left: 50%;
+  border: solid 10px gray;
+  border-radius: 2%;
 }
 
 #display {
