--- a/app/views/charts/_index.html.haml
+++ b/app/views/charts/_index.html.haml
@@ -17,6 +17,8 @@
     %i.fa.fa-step-backward
   %button#button-play
     %i.fa.fa-play
+  %button#button-pause
+    %i.fa.fa-pause
   %button#button-step-forw
     %i.fa.fa-step-forward
 
