made changes for charts index to accomodate new gauge divs

--- a/app/views/charts/_index.html.haml
+++ b/app/views/charts/_index.html.haml
@@ -22,10 +22,12 @@
   %button#button-step-forw
     %i.fa.fa-step-forward
 
-#gauges.center-60
+#gauges
   #gauge_1
   #gauge_2
   #gauge_3
+  #gauge_4
+
 
 
 
