did a bunch of shit

--- a/app/views/data_visualizations/_index.html.haml
+++ b/app/views/data_visualizations/_index.html.haml
@@ -23,10 +23,10 @@
     %i.fa.fa-step-forward
 
 #gauges
-  #gauge_1
-  #gauge_2
-  #gauge_3
-  #gauge_4
+  #gauge_1.gauge
+  #gauge_2.gauge
+  #gauge_3.gauge
+  #gauge_4.gauge
 
 
 
