--- a/app/views/flights/feed.html.haml
+++ b/app/views/flights/feed.html.haml
@@ -1,5 +1,5 @@
 - @flights.each do |flight|
   .flight_box
-    =flight.callsign
+    =link_to "#{flight.callsign}", flight_path(flight)
     -flight.users.each do |user|
-      hey
+      ="by #{user.username}"
