made minor changes to welcome splash page

--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -1,6 +1,4 @@
-%h1 Get High
+%header
+  %h1 Ascent
 
-%a{:href => flights_path}
-  %button.button_left View Flights
-%a{:href => new_flight_path}
-  %button.button_right Create Flight
+%article "We strive to get high."
