--- a/app/assets/stylesheets/base/typography.css
+++ b/app/assets/stylesheets/base/typography.css
@@ -1,11 +1,6 @@
 .text-center {
   text-align:  center;
 }
-h1 {
-  font-size: 100px;
-  color: white;
-  margin: 0;
-}
 .ceviche {
   /*font-family: 'Ceviche One', cursive;*/
 }
@@ -31,12 +26,11 @@ a {
   color: #ccc;
 }
 
-a:visited {
-  color: #999;
-}
-
 a:hover {
   color: #777;
+}
+reg {
+  font-family: calibri;
 }
 
 @media (max-width: 600px) {
