--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -1,3 +1,16 @@
 // Place all the styles related to the welcome controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+header {
+  margin: 5% 0;
+}
+
+header h1 {
+  color: white;
+  font-size: 100px;
+}
+
+article {
+  color: white;
+}
