--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,28 +12,65 @@
     <link href='http://fonts.googleapis.com/css?family=Ceviche+One' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Audiowide' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Permanent+Marker' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Armata' rel='stylesheet' type='text/css'>
     <script src='https://api.tiles.mapbox.com/mapbox.js/v2.1.4/mapbox.js'></script>
     <link href='https://api.tiles.mapbox.com/mapbox.js/v2.1.4/mapbox.css' rel='stylesheet' />
   </head>
-  <div id="user_nav">
-    <% if current_user %>
-      Logged in as <%= current_user.username %>.
-      <%= link_to "Log out", logout_path %>
-    <% else %>
-      <%= link_to "Sign up", signup_path %> or
-      <%= link_to "log in", login_path %>
-    <% end %>
-  </div>
 
-  <% flash.each do |name, msg| %>
-    <%= content_tag :div, msg, :id => "flash_#{name}" %>
-  <% end %>
   <body class="bg-tile">
-    <header><h1 class="ceviche text-center">Ascent</h1></header>
+    <nav id="user_div" class="flex-container">
+        <div class="flexbox"><%= link_to "Ascent", flights_path %></div>
+        <div class="flexbox"><%= link_to "Create Flight", new_flight_path %></div>
+      <% if current_user %>
+        <div class="flexbox box-right"><%= current_user.username %><i class="fa fa-caret-down"></i></div>
+        <div class="menu">
+          <div class="flexbox-col"><%= link_to "My Profile", user_path(current_user) %></div>
+          <hr>
+          <div id="logout" class="flexbox-col"><%= link_to "Log Out", logout_path %></div>
+        </div>
+      <% else %>
+        <div class="flexbox signup box-right">Sign Up</div>
+        <div class="flexbox login">Log In</div>
+        <div class="menu-login">
+          <%= form_tag sessions_path do %>
+            <%= text_field_tag :username, params[:username], id: "username", placeholder: "Username" %>
+            <%= password_field_tag :password_digest, "", id: "password", placeholder: "Password" %>
+            <%= submit_tag "Log In", id: "login-button" %>
+          <% end %>
+          <hr>
+          <a href="#">Forgot Your Password?</a>
+        </div>
+      <% end %>
+    </nav>
+
+    <% flash.each do |name, msg| %>
+      <%= content_tag :div, msg, :id => "flash_#{name}" %>
+    <% end %>
 
     <div class="container">
       <%= yield %>
     </div>
+
+    <% if !current_user %>
+    <div id="signup">
+      <header><h1>Create An Account</h1></header>
+      <%= form_for @user do |f| %>
+      <% if @user.errors.any? %>
+      <div class="error_messages">
+        <h2>Form is invalid</h2>
+        <ul>
+      <% for message in @user.errors.full_messages %>
+          <li><%= message %></li>
+      <% end %>
+        </ul>
+      </div>
+      <% end %>
+      <%= f.text_field :username, id: "signin-username", placeholder: "Enter Username" %>
+      <%= f.password_field :password, id: "signin-password", placeholder: "Enter Password" %>
+      <%= f.submit "Create Account", id: "signup-button" %>
+      <% end %>
+    </div>
+    <% end %>
 
     <footer></footer>
 
