--- a/app/assets/stylesheets/base/layout.css.scss
+++ b/app/assets/stylesheets/base/layout.css.scss
@@ -1,6 +1,6 @@
 // * {
 //   border: 1px dotted black;
-// }
+//}
 
 html,body {
   height: auto;
@@ -11,13 +11,7 @@ html,body {
 }
 
 .bg-tile {
-  background-color: rgb(19,19,19);
-}
-
-.center-60 {
-  width: 60%;
-  margin-left: auto;
-  margin-right: auto;
+  background-color: #191919;
 }
 
 .center {
@@ -29,73 +23,55 @@ html,body {
 }
 
 #above_chart {
-  position: relative;
   height: 50px;
   margin: 15px auto;
 }
 
 .button-area1 {
-  position: absolute;
   right: 0;
   width: 24%;
 }
 
 #main {
-  position: relative;
   height: 400px;
   display: block;
 }
 
 #chart {
-  position: absolute;
   height: 400px;
-  margin: 10px auto 0;
-  width: 60%;
-  margin: 0 0 0 -30%;
+  width: 90%;
+  margin: 0 auto;
   left: 50%;
-  border: solid 10px gray;
   border-radius: 2%;
 }
 
 #map {
-  position: absolute;
   clear: both;
   height: 400px;
-  margin: 10px auto 0;
-  width: 60%;
-  margin: 0 0 0 -30%;
+  width: 90%;
+  margin: 0 auto;
   left: 50%;
-  border: solid 10px gray;
   border-radius: 2%;
 }
 
-#display {
-  border: 5px solid #D1DBDD;
-  border-radius: 15px;
-  position: absolute;
-  height: 300px;
-  width: 15%;
-  right: 3%;
-  color: #acacac;
-  font-family: Sans-serif;
-}
-
-#below_chart {
-  position: relative;
-  margin: 15px auto;
-  height: 8%;
-}
-
-#gauges {
-  display: flex;
-  width: 100%;
+table {
   margin: 0 auto;
 }
-#gauge_1, #gauge_2 {
-  flex: 1;
+
+.gauges {
+  display: block;
+  clear: both;
+  width: 100%;
+  margin: 0 auto;
+  padding: 2%;
+}
+#gauge_1 {
+  display: inline-block;
+  width: 400px;
 }
 #gauge_3, #gauge_4 {
-  flex: 1.5;
+  display: inline-block;
+  width: 400px;
 }
 
 @media (max-width: 1300px) {
@@ -103,4 +79,58 @@ html,body {
     height: 35px;
     margin: 10px auto;
   }
+}
+
+desc {
+  display: none;
+  color: #191919;
+}
+
+// ----------------------------------------------
+// grid
+
+[class*='col-'] {
+  float: left;
+  padding-right: 20px;
+}
+
+[class*='col-']:last-of-type {
+  padding-right: 0;
+}
+
+.col-2-3 {
+  width: 64.66%;
+}
+.col-1-3 {
+  width: 31.33%;
+}
+
+.grid:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+*, *:after, *:before {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+.grid-pad {
+  padding: 2% 0 2% 2%;
+}
+
+.grid-pad > [class*='col-']:last-of-type {
+  padding-right: 2%;
+}
+
+.col-1-2 {
+  width: 48%;
+}
+.col-1-4 {
+  width: 23%;
+}
+.col-1-8 {
+  width: 10.5%;
 }
