--- a/app/views/flights/show.html.haml
+++ b/app/views/flights/show.html.haml
@@ -1,26 +1,42 @@
 %h1
-	="#{@flight.callsign}"
+  ="#{@flight.callsign}"
+%grid{:class => 'grid-pad'}
+  %div{:class => 'col-1-3'}
+    %h3
+      %table
+        %tr
+          %td Max Altitude
+          %td
+            =@flight.max_altitude
+        %tr
+          %td Sounding Duration
+          %td
+            =@flight.duration
+        %tr
+          %td Distance Traveled
+          %td
+            =@flight.distance_traveled.round
 
-%h3
-	="Max Altitude: #{@flight.max_altitude} m"
-	%br
-	="Sounding Duration: #{@flight.duration}"
-	%br
-	="Total Distance Traveled: #{@flight.distance_traveled.round} km"
-	%br
-	%button.show_all_data.button_left View Data
-	%button.show_flight_chart.button_right View Chart/Map
-%div.flight_chart
-	= render :partial => 'data_visualizations/index'
-%div.all_data
-	-@data_points.each_with_index do |point, index|
-		%br
-		=index + 1
-		-point[:data].each do |key, value|
-			="#{key}: #{value}" if value
+  %div{:class => 'col-2-3'}
+    %div.flight_chart
+      = render :partial => 'charts/index'
+
+      / #below_chart
+      /   %button#button-step-back
+      /     %i.fa.fa-step-backward
+      /   %button#button-play
+      /     %i.fa.fa-play
+      /   %button#button-pause
+      /     %i.fa.fa-pause
+      /   %button#button-step-forw
+      /     %i.fa.fa-step-forward
+
+  .gauges{:class => 'grid grid-pad'}
+    #gauge_3
+    / #gauge_2
+    #gauge_1
+    #gauge_4
 =form_for :likes, html: {id: "like"} do |f|
 	=f.hidden_field :id, value: "#{params[:id]}"
 	=f.submit 'LIKE' , class: 'like_button'
 #like_num=@flight.likes.length
-
-
