--- a/app/views/flights/show.html.haml
+++ b/app/views/flights/show.html.haml
@@ -18,7 +18,9 @@
 		=index + 1
 		-point[:data].each do |key, value|
 			="#{key}: #{value}" if value
-
-
+=form_for :likes, html: {id: "like"} do |f|
+	=f.hidden_field :id, value: "#{params[:id]}"
+	=f.submit 'LIKE' , class: 'like_button'
+#like_num=@flight.likes.length
 
 
