--- a/app/views/flights/show.html.haml
+++ b/app/views/flights/show.html.haml
@@ -3,19 +3,19 @@
 %grid{:class => 'grid-pad'}
   %div{:class => 'col-1-3'}
     %h3
-      %table
-        %tr
-          %td Max Altitude
-          %td
-            =@flight.max_altitude
-        %tr
-          %td Sounding Duration
-          %td
-            =@flight.duration
-        %tr
-          %td Distance Traveled
-          %td
-            =@flight.distance_traveled.round
+      / %table
+      /   %tr
+      /     %td Max Altitude
+      /     %td
+      /       =@flight.max_altitude
+      /   %tr
+      /     %td Sounding Duration
+      /     %td
+      /       =@flight.duration
+      /   %tr
+      /     %td Distance Traveled
+      /     %td
+      /       =@flight.distance_traveled.round
 
   %div{:class => 'col-2-3'}
     %div.flight_chart
@@ -33,7 +33,6 @@
 
   .gauges{:class => 'grid grid-pad'}
     #gauge_3
-    / #gauge_2
     #gauge_1
     #gauge_4
 =form_for :likes, html: {id: "like"} do |f|
