--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,9 +22,27 @@
         <div class="flexbox"><%= link_to "Ascent", flights_path %></div>
         <div class="flexbox"><%= link_to "Create Flight", new_flight_path %></div>
       <% if current_user %>
-        <div class="flexbox box-right"><%= current_user.username %><i class="fa fa-caret-down"></i></div>
+        <div id="dropdown2" class="flexbox box-right"><i class="fa fa-users fa-2x"></i></div>
+
+        <div id="notification">
+        <% current_user.friendships.where("approved = false").each do |friendship| %>
+            <% if friendship.user == current_user %>
+              <div class="flexbox">
+                <%= friendship.friend.username %>
+              </div>
+              <%= form_for :friendships, method: 'PUT', url: "/approve/#{friendship.id}" do |f| %>
+                <%= f.submit 'Add Friend' , class: 'button' %>
+              <% end %>
+              <%= form_for :friendships, method: 'DELETE', url: "/friendships/#{friendship.id}" do |f| %>
+                <%= f.submit 'Remove' , class: 'button' %>
+              <% end %>
+            <% end %>
+          <% end %>
+        </div>
+
+        <div id="dropdown1" class="flexbox"><%= current_user.username %><i id="caret" class="fa fa-caret-down"></i></div>
         <div class="menu">
-          <div class="flexbox-col"><%= link_to "My Profile", user_path(current_user) %></div>
+          <div class="flexbox-col"><%= link_to "Profile", user_path(current_user) %></div>
           <hr>
           <div id="logout" class="flexbox-col"><%= link_to "Log Out", logout_path %></div>
         </div>
@@ -42,7 +60,6 @@
         </div>
       <% end %>
     </nav>
-
     <% flash.each do |name, msg| %>
       <%= content_tag :div, msg, :id => "flash_#{name}" %>
     <% end %>
@@ -51,11 +68,11 @@
       <%= yield %>
     </div>
 
-    <% if !current_user %>
+    <% unless current_user %>
     <div id="signup">
       <header><h1>Create An Account</h1></header>
-      <%= form_for @user do |f| %>
-      <% if @user.errors.any? %>
+      <%= form_for User.new do |f| %>
+      <% if @user && @user.errors.any? %>
       <div class="error_messages">
         <h2>Form is invalid</h2>
         <ul>
