refactored after rebase.  encountering nil for user error in signup form.

--- a/app/views/data_visualizations/_index.html.haml
+++ b/app/views/data_visualizations/_index.html.haml
@@ -1,36 +1,8 @@
-/ #above_chart
-/   .button-area1
-/     / %button.button_left.audiowide#chart_button CHART
-/     / %button.button_right.audiowide#map_button MAP
+#above_chart
+  .button-area1
+    / %button.button_left.audiowide#chart_button CHART
+    / %button.button_right.audiowide#map_button MAP
 
-/ #main
-/   #chart
-/   #map
-/ <<<<<<< HEAD:app/views/data_visualizations/_index.html.haml
-/   #display
-/     %h4.perm-marker.text-center Data Point:
-/     %p.perm-marker#time
-/     %p.perm-marker#altitude
-/     %p.perm-marker#temp
-
-/ #below_chart.center-60
-/   %button#button-step-back
-/     %i.fa.fa-step-backward
-/   %button#button-play
-/     %i.fa.fa-play
-/   %button#button-pause
-/     %i.fa.fa-pause
-/   %button#button-step-forw
-/     %i.fa.fa-step-forward
-
-/ #gauges
-/   #gauge_1.gauge
-/   #gauge_2.gauge
-/   #gauge_3.gauge
-/   #gauge_4.gauge
-
-
-
-
-/ =======
-/ >>>>>>> instituted grid:app/views/charts/_index.html.haml
+#main
+  #chart
+  #map
