--- a/app/views/flights/show.html.haml
+++ b/app/views/flights/show.html.haml
@@ -19,7 +19,7 @@
 
   %div{:class => 'col-2-3'}
     %div.flight_chart
-      = render :partial => 'charts/index'
+      = render :partial => 'data_visualizations/index'
 
       / #below_chart
       /   %button#button-step-back
@@ -35,7 +35,8 @@
     #gauge_3
     #gauge_1
     #gauge_4
+
 =form_for :likes, html: {id: "like"} do |f|
-	=f.hidden_field :id, value: "#{params[:id]}"
-	=f.submit 'LIKE' , class: 'like_button'
+  =f.hidden_field :id, value: "#{params[:id]}"
+  =f.submit 'LIKE' , class: 'like_button'
 #like_num=@flight.likes.length
