--- a/app/assets/stylesheets/base/layout.css.scss
+++ b/app/assets/stylesheets/base/layout.css.scss
@@ -2,6 +2,11 @@
 //   border: 1px dotted black;
 //}
 
+h2 {
+  font-family: 'Codystar', cursive;
+  font-size: 2em;
+}
+
 html,body {
   height: auto;
   width: 100%;
