images in gallery are shown as thumbnails

--- a/app/views/pictures/index.html.haml
+++ b/app/views/pictures/index.html.haml
@@ -5,7 +5,7 @@
 #images_container
   - @flight.pictures.each do |picture|
     #image_container
-      = image_tag picture.image if picture.image.present?
+      = image_tag picture.image_url(:thumb).to_s
 
 
 
