--- a/app/assets/stylesheets/base/layout.css.scss
+++ b/app/assets/stylesheets/base/layout.css.scss
@@ -19,6 +19,18 @@ html,body {
   padding: 0;
 }
 
+input[type="submit"] {
+  width: 200px;
+  height: 45px;
+  border: 2px solid black;
+  background: rgba(0,0,0,0);
+  outline: none;
+  font-weight: bold;
+}
+input[type="submit"]:hover {
+  background: lightgray;
+}
+
 .bg-tile {
   background-color: #191919;
 }
