--- a/app/assets/stylesheets/base/layout.css.scss
+++ b/app/assets/stylesheets/base/layout.css.scss
@@ -1,6 +1,3 @@
-// * {
-//   border: 1px dotted black;
-//}
 
 h2 {
   font-family: 'Codystar', cursive;
@@ -10,6 +7,9 @@ h2 {
 h3 {
   font-family: 'Codystar', cursive;
   font-size: 1em;
+  margin: 0, auto;
+  align: center;
+  text-align: center;
 }
 
 html,body {
@@ -66,7 +66,13 @@ html,body {
 }
 
 table {
-  margin: 0 auto;
+  margin: 0, auto;
+  width: 60%;
+}
+
+
+td {
+  text-align: left;
 }
 
 .gauges {
