--- a/app/assets/stylesheets/modules/navbar.css
+++ b/app/assets/stylesheets/modules/navbar.css
@@ -196,7 +196,7 @@ form {
 }
 #notification.active a {
   font-family: 'Armata', sans-serif;
-  font-size: 20px;
+  font-size: 18px;
   color: #D1DBDD;
   padding-left: 10px;
 }
@@ -217,6 +217,7 @@ form {
 }
 .flex-2 {
   display: flex;
+  justify-content: center;
   align-items: center;
   flex: 3;
 }
