--- a/app/assets/stylesheets/base/layout.css.scss
+++ b/app/assets/stylesheets/base/layout.css.scss
@@ -7,8 +7,6 @@ h2 {
 h3 {
   font-family: 'Codystar', cursive;
   font-size: 1em;
-  margin: 0, auto;
-  align: center;
   text-align: center;
 }
 
@@ -66,8 +64,8 @@ html,body {
 }
 
 table {
-  margin: 0, auto;
   width: 60%;
+  margin: auto;
 }
 
 
