--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,10 +26,10 @@
         <div id="notification">
         <div id="friend-request">Friend Requests</div>
         <hr>
-        <% current_user.friendships.where("approved = false").each do |friendship| %>
-            <% if friendship.user == current_user %>
+        <% current_user.inverse_friendships.where("approved = false").each do |friendship| %>
+            <% if friendship.friend == current_user %>
               <div class="friend-list">
-                <%= link_to friendship.friend.username, user_path(friendship.friend), class: "flex-2" %>
+                <%= link_to friendship.user.username, user_path(friendship.friend), class: "flex-2" %>
                 <%= form_for :friendships, method: 'PUT', url: "/approve/#{friendship.id}", html: {class: "flex-1"} do |f| %>
                   <%= f.submit 'Y', id: "yes" %>
                 <% end %>
