added comment box animations and whatever

--- a/app/views/data_visualizations/_index.html.haml
+++ b/app/views/data_visualizations/_index.html.haml
@@ -10,3 +10,9 @@
   %grid
     #chart
     #map
+#data_comment
+  =form_for :comments do |f|
+    =f.text_field :name
+    #submit_field
+      =f.submit "comment", id: "data_submit"
+
