--- a/app/assets/stylesheets/base/layout.css.scss
+++ b/app/assets/stylesheets/base/layout.css.scss
@@ -19,22 +19,6 @@ html,body {
   padding: 0;
 }
 
-#comment{
-  display: none;
-}
-
-input[type="submit"] {
-  width: 200px;
-  height: 45px;
-  border: 2px solid black;
-  background: rgba(0,0,0,0);
-  outline: none;
-}
-
-input[type="submit"]:hover {
-  background: lightgray;
-}
-
 .bg-tile {
   background-color: #191919;
 }
@@ -171,3 +155,49 @@ desc {
   padding-right: 2%;
 }
 
+#comment{
+  display: none;
+}
+
+input[type="submit"] {
+  width: 200px;
+  height: 45px;
+  border: 2px solid black;
+  background: rgba(0,0,0,0);
+  outline: none;
+}
+
+input[type="submit"]:hover {
+  background: lightgray;
+}
+
+input[type="text"] {
+  height: 43px;
+  width: 200px;
+  border: 2px solid black;
+  outline: none;
+}
+#data_comment {
+  display: none;
+}
+#data_comment input[type="submit"]  {
+  height: 25px;
+  width: 150px;
+  font-size: 15px;
+}
+
+#data_comment input[type="text"] {
+  vertical-align: top;
+  height: 25px;
+  width: 300px;
+}
+
+#data_submit {
+  display: none;
+}
+
+#submit_field {
+  display: inline-block;
+  width: 150px;
+  height: 25px;
+}
