--- a/app/views/flights/show.html.haml
+++ b/app/views/flights/show.html.haml
@@ -1,5 +1,5 @@
 %container
-  %h2
+  %h3
     ="#{@flight.callsign}"
   %grid{:class => 'grid-pad'}
     %div{:class => 'col-1-3'}
@@ -30,10 +30,12 @@
           %grid{:class => 'col-3-4'}
             %h3 comments will go here
           %grid{:class => 'col-1-4'}
+            %button#chart_map_button Map
             %button#button-play
               %i.fa.fa-play
             %button#button-pause
               %i.fa.fa-pause
+
 
     .gauges{:class => 'grid grid-pad'}
       #gauge_3
