flight comments done

--- a/app/assets/stylesheets/base/layout.css.scss
+++ b/app/assets/stylesheets/base/layout.css.scss
@@ -179,6 +179,7 @@ input[type="text"] {
 }
 #data_comment {
   display: none;
+  margin-bottom: 10px;
 }
 #data_comment input[type="submit"]  {
   height: 25px;
