comments display on page and look pretty bad

--- a/app/views/flights/show.html.haml
+++ b/app/views/flights/show.html.haml
@@ -63,15 +63,21 @@
       #gauge_1
       #gauge_4
 
-  / =form_for :likes, html: {id: "like"} do |f|
-  /   =f.hidden_field :id, value: "#{params[:id]}"
-  /   =f.submit "LIKE: #{@flight.likes.length}" , class: 'like_button', id: "like_num"
-  / %input{type: "submit", value: "COMMENT", id: "toggle_comment"}
-  / #comment
-  /   =form_for :comments, html: {id: "post_comment"} do |f|
-  /     =f.hidden_field :id, value: "#{params[:id]}"
-  /     =f.text_field :body
-  /     %br
-  /     =f.submit "Submit"
+  =form_for :likes, html: {id: "like"} do |f|
+    =f.hidden_field :id, value: "#{params[:id]}"
+    =f.submit "LIKE: #{@flight.likes.length}" , class: 'like_button', id: "like_num"
+  %input{type: "submit", value: "COMMENT", id: "toggle_comment"}
+  #comment
+    =form_for :comments, html: {id: "post_comment"} do |f|
+      =f.hidden_field :id, value: "#{params[:id]}"
+      =f.text_field :body
+      %br
+      =f.submit "Submit"
+  #comment_roll
+    -@flight.comments.each do |comment|
+      .comment_body
+        = comment.body
+        = comment.author.username
+
 
 
