--- a/app/assets/stylesheets/base/layout.css.scss
+++ b/app/assets/stylesheets/base/layout.css.scss
@@ -218,3 +218,53 @@ input[type="text"] {
   width: 150px;
   height: 25px;
 }
+
+.comment_body {
+  margin: 0 auto;
+  color: gray;
+  font-weight: lighter;
+  margin-top: 30px;
+  position: relative;
+  width: 300px;
+  min-height: 60px;
+  height: auto;
+  padding-right: 20px;
+  padding-left: 20px;
+  padding-bottom: 18px;
+  // overflow: auto;
+  padding-top: 18px;
+  background: #191919;
+  border: #4d1eb3 solid 1px;
+  -webkit-border-radius: 41px;
+  -moz-border-radius: 41px;
+  border-radius: 41px;
+}
+
+// .comment_body:after {
+//   content: "";
+//   position: absolute;
+//   bottom: -13px;
+//   left: 224px;
+//   border-style: solid;
+//   border-width: 13px 9px 0;
+//   border-color: #191919 transparent;
+//   display: block;
+//   width: 0;
+//   z-index: 1;
+// }
+
+// .comment_body:before {
+//   content: "";
+//   position: absolute;
+//   top: 59px;
+//   left: 224px;
+//   border-style: solid;
+//   border-width: 13px 9px 0;
+//   border-color: #4d1eb3 transparent;
+//   display: block;
+//   width: 0;
+//   z-index: 0;
+// }
+
+
+
