added flight comment display

--- a/app/assets/stylesheets/base/layout.css.scss
+++ b/app/assets/stylesheets/base/layout.css.scss
@@ -240,6 +240,10 @@ input[type="text"] {
   border-radius: 41px;
 }
 
+.comment_body:hover {
+  background-color: #4d1eb3;
+}
+
 // .comment_body:after {
 //   content: "";
 //   position: absolute;
