trying to get the jquery scroll to work

--- a/app/assets/stylesheets/modules/navbar.css
+++ b/app/assets/stylesheets/modules/navbar.css
@@ -193,6 +193,7 @@ form {
   border: 2px solid lightgray;
   background: white;
   overflow: auto;
+  z-index: 999;
 }
 #notification.active a {
   font-family: 'Armata', sans-serif;
