moved likes and comments to left div

--- a/app/assets/stylesheets/base/layout.css.scss
+++ b/app/assets/stylesheets/base/layout.css.scss
@@ -67,12 +67,22 @@ html,body {
 
 table {
   margin: auto;
-  width: 80%;
+  width: 60%;
 }
 
 
-td {
+.tdleft {
   text-align: left;
+}
+
+.tdright {
+  text-align: right;
+  float: right;
+}
+
+.tdmiddle{
+  text-align: center;
+  margin: 0, auto;
 }
 
 .gauges {
